# Noise-reduction

./: .gitignore  AGENT_INSTRUCTIONS.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
engine/: audio_engine.py  build_sidecar.py  logging_config.py  pyproject.toml  requirements.txt  run.py  server.py
src/: App.tsx  index.css  lucide-direct.d.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ProcessForm.tsx  StatusPanel.tsx  error-boundary.tsx
src/features/: app-sidebar.tsx  jobs-view.tsx  process-view.tsx  settings-view.tsx
src/lib/: api.ts  engine-client.ts  native.ts  settings.ts  types.ts
tests/: README.md
